// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`allows the constantFoldingPlugin to not remove used helpers when \`dev: false\` 1`] = `
"__d(function (global, _$$_REQUIRE, _$$_IMPORT_DEFAULT, _$$_IMPORT_ALL, module, exports, _dependencyMap) {
  Object.defineProperty(exports, "__esModule", {
    value: true
  });
  exports.test = undefined;
  var test = _interopRequireWildcard(_$$_REQUIRE(_dependencyMap[0]));
  exports.test = test;
  function _getRequireWildcardCache(nodeInterop) { if (typeof WeakMap !== "function") return null; var cacheBabelInterop = new WeakMap(); var cacheNodeInterop = new WeakMap(); return (_getRequireWildcardCache = function _getRequireWildcardCache(nodeInterop) { return nodeInterop ? cacheNodeInterop : cacheBabelInterop; })(nodeInterop); }
  function _interopRequireWildcard(obj, nodeInterop) { if (!nodeInterop && obj && obj.__esModule) { return obj; } if (obj === null || typeof obj !== "object" && typeof obj !== "function") { return { default: obj }; } var cache = _getRequireWildcardCache(nodeInterop); if (cache && cache.has(obj)) { return cache.get(obj); } var newObj = {}; var hasPropertyDescriptor = Object.defineProperty && Object.getOwnPropertyDescriptor; for (var key in obj) { if (key !== "default" && Object.prototype.hasOwnProperty.call(obj, key)) { var desc = hasPropertyDescriptor ? Object.getOwnPropertyDescriptor(obj, key) : null; if (desc && (desc.get || desc.set)) { Object.defineProperty(newObj, key, desc); } else { newObj[key] = obj[key]; } } } newObj.default = obj; if (cache) { cache.set(obj, newObj); } return newObj; }
});"
`;

exports[`reports filename when encountering unsupported dynamic dependency 1`] = `"local/file.js:Invalid call at line 3: require(a)"`;

exports[`transforms a module with dependencies 1`] = `
{
  "mappings": "AAA",
  "names": [
    "<global>",
  ],
}
`;

exports[`transforms a simple module 1`] = `
{
  "mappings": "AAA",
  "names": [
    "<global>",
  ],
}
`;

exports[`transforms a simple script 1`] = `
{
  "mappings": "AAA",
  "names": [
    "<global>",
  ],
}
`;

exports[`transforms an es module with asyncToGenerator 1`] = `
"__d(function (global, _$$_REQUIRE, _$$_IMPORT_DEFAULT, _$$_IMPORT_ALL, module, exports, _dependencyMap) {
  var _interopRequireDefault = _$$_REQUIRE(_dependencyMap[0], "@babel/runtime/helpers/interopRequireDefault");
  Object.defineProperty(exports, "__esModule", {
    value: true
  });
  exports.test = test;
  var _asyncToGenerator2 = _interopRequireDefault(_$$_REQUIRE(_dependencyMap[1], "@babel/runtime/helpers/asyncToGenerator"));
  function test() {
    return _test.apply(this, arguments);
  }
  function _test() {
    _test = (0, _asyncToGenerator2.default)(function* () {});
    return _test.apply(this, arguments);
  }
});"
`;

exports[`transforms an es module with asyncToGenerator 2`] = `
{
  "mappings": "AAA,OC",
  "names": [
    "<global>",
    "test",
  ],
}
`;

exports[`transforms async generators 1`] = `
"__d(function (global, _$$_REQUIRE, _$$_IMPORT_DEFAULT, _$$_IMPORT_ALL, module, exports, _dependencyMap) {
  var _interopRequireDefault = _$$_REQUIRE(_dependencyMap[0], "@babel/runtime/helpers/interopRequireDefault");
  Object.defineProperty(exports, "__esModule", {
    value: true
  });
  exports.test = test;
  var _awaitAsyncGenerator2 = _interopRequireDefault(_$$_REQUIRE(_dependencyMap[1], "@babel/runtime/helpers/awaitAsyncGenerator"));
  var _wrapAsyncGenerator2 = _interopRequireDefault(_$$_REQUIRE(_dependencyMap[2], "@babel/runtime/helpers/wrapAsyncGenerator"));
  function test() {
    return _test.apply(this, arguments);
  }
  function _test() {
    _test = (0, _wrapAsyncGenerator2.default)(function* () {
      yield "ok";
    });
    return _test.apply(this, arguments);
  }
});"
`;

exports[`transforms import/export syntax when experimental flag is on 1`] = `
{
  "mappings": "AAA",
  "names": [
    "<global>",
  ],
}
`;
